added upload img feature

--- a/views/club_dashboard.ejs
+++ b/views/club_dashboard.ejs
@@ -74,8 +74,18 @@
         </div>
     </nav>
     <!-- Navbar Section Ends -->
+    <div class="container">
 
+        <div class="jumbotron text-center">
+            <h1  style="color: rgb(0, 0, 193)"><span class="fab fa-google-drive"></span> Upload via Google Drive..</h1>
 
+            <p style="font-family: bold; font-size: 3rem">Login or Register with:</p>
+
+            <a href="<%=url%>" type="button" class="btn btn-danger btn-large"><span class="fab fa-google"></span> Google</a>
+
+        </div>
+
+    </div>
     <!-- Login container -->
 
     <div class="container" style="margin-top: 100px; width:30%;">
