--- a/views/club_dashboard.ejs
+++ b/views/club_dashboard.ejs
@@ -8,7 +8,7 @@
 </head>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-
+<script src="https://kit.fontawesome.com/5a38767ab2.js" crossorigin="anonymous"></script>
 <style>
     .navbar-light .navbar-nav .nav-link {
         color: #2109fce6;
